--- a/web.config
+++ b/web.config
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
+	<defaultDocument>
+            <files>
+                <clear />               
+                <add value="Home.html"/>
+            </files>
+	</defaultDocument>
 	<rewrite>
 		<rules>
 			<rule name="Hide .html ext">
